// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Umami <RecipeListTemplate /> > should render recipes 1`] = `
<DocumentFragment>
  <div
    class="_layout_522a10 flex flex-col"
  >
    <div
      class="ps-my-0 ps-pt-10 ps-px-5 ps-text-xl"
    >
      <nav>
        <ul
          class="ps-flex ps-flex-row ps-flex-wrap sm:ps-flex-nowrap ps-list-none ps-justify-between ps-max-w-screen-sm ps-mx-auto"
        >
          <li
            class="ps-mr-auto"
          >
            <a
              class="ps-font-sans hover:ps-underline"
              href="/"
            >
              🏠 Home
            </a>
          </li>
          <li
            class="ps-mx-4"
          >
            <a
              class="ps-font-sans hover:ps-underline"
              href="/articles"
            >
              📰 Articles
            </a>
          </li>
          <li
            class="ps-mx-4"
          >
            <a
              class="ps-font-sans hover:ps-underline"
              href="/pages"
            >
              📑 Pages
            </a>
          </li>
          <li
            class="ps-mx-4"
          >
            <a
              class="ps-font-sans hover:ps-underline"
              href="/examples"
            >
              ⚛️ Examples
            </a>
          </li>
        </ul>
      </nav>
    </div>
    <main
      class="_layoutMain_522a10 mb-auto"
    >
      <header
        class="_header_be6ffb"
      >
        <h1
          class="_headerTitle_be6ffb font-extrabold my-auto mx-0 text-center"
        >
          Recipes
        </h1>
      </header>
      <section>
        <div
          class="ps-mt-12 ps-grid ps-gap-5 ps-max-w-content ps-mx-auto lg:ps-max-w-screen-lg lg:ps-grid-cols-3"
        >
          <a
            href="/recipes/vegan-chocolate-and-nut-brownies"
          >
            <div
              class="_card_91079f rounded-lg cursor-pointer h-full overflow-x-hidden rounded-lg cursor-pointer h-full overflow-x-hidden"
            >
              <div
                class="_cardImg_91079f shrink-0 h-40 relative shrink-0 h-40 relative"
              >
                <img
                  alt="Vegan chocolate and nut brownies"
                  src="https://default/sites/default/files/vegan-chocolate-nut-brownies.jpg"
                />
              </div>
              <h2
                class="_cardTitle_91079f font-semibold py-4 px-6 font-semibold py-4 px-6"
              >
                Vegan chocolate and nut brownies →
              </h2>
              <span
                class="_recipeCategory_91079f text-right"
              >
                Snacks
              </span>
            </div>
          </a>
          <a
            href="/recipes/watercress-soup"
          >
            <div
              class="_card_91079f rounded-lg cursor-pointer h-full overflow-x-hidden rounded-lg cursor-pointer h-full overflow-x-hidden"
            >
              <div
                class="_cardImg_91079f shrink-0 h-40 relative shrink-0 h-40 relative"
              >
                <img
                  alt="Watercress soup"
                  src="https://default/sites/default/files/watercress-soup-umami.jpg"
                />
              </div>
              <h2
                class="_cardTitle_91079f font-semibold py-4 px-6 font-semibold py-4 px-6"
              >
                Watercress soup →
              </h2>
              <span
                class="_recipeCategory_91079f text-right"
              >
                Starters
              </span>
            </div>
          </a>
          <a
            href="/recipes/victoria-sponge-cake"
          >
            <div
              class="_card_91079f rounded-lg cursor-pointer h-full overflow-x-hidden rounded-lg cursor-pointer h-full overflow-x-hidden"
            >
              <div
                class="_cardImg_91079f shrink-0 h-40 relative shrink-0 h-40 relative"
              >
                <img
                  alt="Victoria sponge cake"
                  src="https://default/sites/default/files/victoria-sponge-umami.jpg"
                />
              </div>
              <h2
                class="_cardTitle_91079f font-semibold py-4 px-6 font-semibold py-4 px-6"
              >
                Victoria sponge cake →
              </h2>
              <span
                class="_recipeCategory_91079f text-right"
              >
                Desserts
              </span>
            </div>
          </a>
          <a
            href="/recipes/gluten-free-pizza"
          >
            <div
              class="_card_91079f rounded-lg cursor-pointer h-full overflow-x-hidden rounded-lg cursor-pointer h-full overflow-x-hidden"
            >
              <div
                class="_cardImg_91079f shrink-0 h-40 relative shrink-0 h-40 relative"
              >
                <img
                  alt="Gluten free pizza"
                  src="https://default/sites/default/files/pizza-umami.jpg"
                />
              </div>
              <h2
                class="_cardTitle_91079f font-semibold py-4 px-6 font-semibold py-4 px-6"
              >
                Gluten free pizza →
              </h2>
              <span
                class="_recipeCategory_91079f text-right"
              >
                Main courses
              </span>
            </div>
          </a>
          <a
            href="/recipes/thai-green-curry"
          >
            <div
              class="_card_91079f rounded-lg cursor-pointer h-full overflow-x-hidden rounded-lg cursor-pointer h-full overflow-x-hidden"
            >
              <div
                class="_cardImg_91079f shrink-0 h-40 relative shrink-0 h-40 relative"
              >
                <img
                  alt="Thai green curry"
                  src="https://default/sites/default/files/thai-green-curry-umami.jpg"
                />
              </div>
              <h2
                class="_cardTitle_91079f font-semibold py-4 px-6 font-semibold py-4 px-6"
              >
                Thai green curry →
              </h2>
              <span
                class="_recipeCategory_91079f text-right"
              >
                Main courses
              </span>
            </div>
          </a>
          <a
            href="/recipes/crema-catalana"
          >
            <div
              class="_card_91079f rounded-lg cursor-pointer h-full overflow-x-hidden rounded-lg cursor-pointer h-full overflow-x-hidden"
            >
              <div
                class="_cardImg_91079f shrink-0 h-40 relative shrink-0 h-40 relative"
              >
                <img
                  alt="Crema catalana"
                  src="https://default/sites/default/files/crema-catalana-umami.jpg"
                />
              </div>
              <h2
                class="_cardTitle_91079f font-semibold py-4 px-6 font-semibold py-4 px-6"
              >
                Crema catalana →
              </h2>
              <span
                class="_recipeCategory_91079f text-right"
              >
                Desserts
              </span>
            </div>
          </a>
          <a
            href="/recipes/fiery-chili-sauce"
          >
            <div
              class="_card_91079f rounded-lg cursor-pointer h-full overflow-x-hidden rounded-lg cursor-pointer h-full overflow-x-hidden"
            >
              <div
                class="_cardImg_91079f shrink-0 h-40 relative shrink-0 h-40 relative"
              >
                <img
                  alt="Fiery chili sauce"
                  src="https://default/sites/default/files/chili-sauce-umami.jpg"
                />
              </div>
              <h2
                class="_cardTitle_91079f font-semibold py-4 px-6 font-semibold py-4 px-6"
              >
                Fiery chili sauce →
              </h2>
              <span
                class="_recipeCategory_91079f text-right"
              >
                Accompaniments
              </span>
            </div>
          </a>
          <a
            href="/recipes/deep-mediterranean-quiche"
          >
            <div
              class="_card_91079f rounded-lg cursor-pointer h-full overflow-x-hidden rounded-lg cursor-pointer h-full overflow-x-hidden"
            >
              <div
                class="_cardImg_91079f shrink-0 h-40 relative shrink-0 h-40 relative"
              >
                <img
                  alt="Deep mediterranean quiche"
                  src="https://default/sites/default/files/mediterranean-quiche-umami.jpg"
                />
              </div>
              <h2
                class="_cardTitle_91079f font-semibold py-4 px-6 font-semibold py-4 px-6"
              >
                Deep mediterranean quiche →
              </h2>
              <span
                class="_recipeCategory_91079f text-right"
              >
                Main courses
              </span>
            </div>
          </a>
          <a
            href="/recipes/borscht-with-pork-ribs"
          >
            <div
              class="_card_91079f rounded-lg cursor-pointer h-full overflow-x-hidden rounded-lg cursor-pointer h-full overflow-x-hidden"
            >
              <div
                class="_cardImg_91079f shrink-0 h-40 relative shrink-0 h-40 relative"
              >
                <img
                  alt="Borscht with pork ribs"
                  src="https://default/sites/default/files/borscht-with-pork-ribs-umami.jpg"
                />
              </div>
              <h2
                class="_cardTitle_91079f font-semibold py-4 px-6 font-semibold py-4 px-6"
              >
                Borscht with pork ribs →
              </h2>
              <span
                class="_recipeCategory_91079f text-right"
              >
                Main courses
              </span>
            </div>
          </a>
          <a
            href="/recipes/super-easy-vegetarian-pasta-bake"
          >
            <div
              class="_card_91079f rounded-lg cursor-pointer h-full overflow-x-hidden rounded-lg cursor-pointer h-full overflow-x-hidden"
            >
              <div
                class="_cardImg_91079f shrink-0 h-40 relative shrink-0 h-40 relative"
              >
                <img
                  alt="Super easy vegetarian pasta bake-test"
                  src="https://default/sites/default/files/veggie-pasta-bake-umami.jpg"
                />
              </div>
              <h2
                class="_cardTitle_91079f font-semibold py-4 px-6 font-semibold py-4 px-6"
              >
                Super easy vegetarian pasta bake-test →
              </h2>
              <span
                class="_recipeCategory_91079f text-right"
              >
                Main courses
              </span>
            </div>
          </a>
        </div>
      </section>
    </main>
    <footer
      class="ps-w-full ps-text-white ps-bg-black ps-p-4 ps-mt-12"
    >
      <nav
        class="ps-flex ps-flex-col ps-max-w-lg ps-mx-auto lg:ps-max-w-screen-lg"
      >
        <ul>
          <li
            class="ps-list-disc ps-text-blue-300"
          >
            <a
              class="ps-text-blue-300 hover:ps-underline hover:ps-text-blue-100 focus:ps-text-purple-600 active:ps-text-purple-300"
              href="/en"
            >
              Home
            </a>
          </li>
          <li
            class="ps-list-disc ps-text-blue-300"
          >
            <a
              class="ps-text-blue-300 hover:ps-underline hover:ps-text-blue-100 focus:ps-text-purple-600 active:ps-text-purple-300"
              href="/en/articles"
            >
              Articles
            </a>
          </li>
          <li
            class="ps-list-disc ps-text-blue-300"
          >
            <a
              class="ps-text-blue-300 hover:ps-underline hover:ps-text-blue-100 focus:ps-text-purple-600 active:ps-text-purple-300"
              href="/en/recipes"
            >
              Recipes
            </a>
          </li>
        </ul>
      </nav>
      <div
        class="ps-flex ps-my-4 ps-p-2"
      >
        <span
          class="_footerCopy_522a10 my-0 mx-auto"
        >
          © 2023 Built with 
          <a
            href="https://nextjs.org/"
          >
            Next.js
          </a>
           and 
          <a
            href="https://www.drupal.org/"
          >
            Drupal
          </a>
        </span>
      </div>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`Umami <RecipeTemplate /> > should render recipe 1`] = `
<DocumentFragment>
  <div
    class="_layout_522a10 flex flex-col"
  >
    <div
      class="ps-my-0 ps-pt-10 ps-px-5 ps-text-xl"
    >
      <nav>
        <ul
          class="ps-flex ps-flex-row ps-flex-wrap sm:ps-flex-nowrap ps-list-none ps-justify-between ps-max-w-screen-sm ps-mx-auto"
        >
          <li
            class="ps-mr-auto"
          >
            <a
              class="ps-font-sans hover:ps-underline"
              href="/"
            >
              🏠 Home
            </a>
          </li>
          <li
            class="ps-mx-4"
          >
            <a
              class="ps-font-sans hover:ps-underline"
              href="/articles"
            >
              📰 Articles
            </a>
          </li>
          <li
            class="ps-mx-4"
          >
            <a
              class="ps-font-sans hover:ps-underline"
              href="/pages"
            >
              📑 Pages
            </a>
          </li>
          <li
            class="ps-mx-4"
          >
            <a
              class="ps-font-sans hover:ps-underline"
              href="/examples"
            >
              ⚛️ Examples
            </a>
          </li>
        </ul>
      </nav>
    </div>
    <main
      class="_layoutMain_522a10 mb-auto"
    >
      <article
        class="ps-prose lg:ps-prose-xl ps-mt-10 ps-mx-auto h-fit ps-p-4 sm:ps-p-0"
      >
        <header>
          <h1>
            Vegan chocolate and nut brownies
          </h1>
          <div
            class="ps-flex ps-flex-row ps-justify-between"
          >
            <a
              class="ps-font-normal ps-cursor-pointer"
            >
              Back →
            </a>
            <span
              class="text ps-pb-2 ps-pr-3 ps-text-sm text-slate-400"
            >
              Snacks
            </span>
          </div>
        </header>
        <div
          class="ps-relative ps-max-w-lg ps-mx-auto ps-min-w-full ps-h-[50vh] ps-rounded-lg ps-shadow-lg ps-overflow-hidden ps-mt-12 ps-mb-10"
        >
          <img
            alt="Vegan chocolate and nut brownies"
            src="https://default/sites/default/files/vegan-chocolate-nut-brownies.jpg"
          />
        </div>
        <div
          class="ps-flex ps-flex-col sm:ps-flex-row"
        >
          <section
            class="ps-flex ps-flex-col min-w-fit sm:ps-border-r-2 ps-pr-4"
          >
            <h2>
              Ingredients
            </h2>
            <ul>
              <li>
                6 tbsp sunflower oil
              </li>
              <li>
                 80g vegan dark chocolate
              </li>
              <li>
                 170g plain flour
              </li>
              <li>
                 80g coconut flour
              </li>
              <li>
                 1 tsp baking powder
              </li>
              <li>
                 9 tsp cocoa powder
              </li>
              <li>
                 100g caster sugar
              </li>
              <li>
                 3 tbsp of maple syrup
              </li>
              <li>
                 1/4 tsp sea salt
              </li>
              <li>
                 1 tsp vanilla extract
              </li>
              <li>
                 230ml unsweetened organic soya milk
              </li>
              <li>
                 100g pecan nuts
              </li>
              <li>
                 80g walnut halves
              </li>
            </ul>
          </section>
          <section
            class="ps-flex ps-flex-col ps-pl-4"
          >
            <h2
              class="ps-ml-4"
            >
              Directions
            </h2>
            <div>
              <ol>
                
  
                <li>
                  Use a little of the sunflower oil to grease an 8 inch square baking tin (or similar size) and line the tin with greaseproof paper.
                </li>
                
  
                <li>
                  Preheat the oven to 350°F/180°C.
                </li>
                
  
                <li>
                  Break approximately 1/3rd of the chocolate bar off and chop into small pieces. Roughly chop 2/3rds of the pecan nuts and mix together with the chopped chocolate. Set aside.
                </li>
                
  
                <li>
                  For finishing the brownies, chop or crush the remaining pecan nuts and walnuts, mix together and set aside.
                </li>
                
  
                <li>
                  Melt the remaining chocolate by bringing a couple inches of water to the boil in a small saucepan that is suitably sized for holding a heatproof bowl in the pan opening. Do not allow the bottom of the heatproof bowl to touch the water. Place the chocolate into the bowl to melt, stirring occasionally to ensure the chocolate has fully melted. Once melted, set aside and allow to cool slightly.
                </li>
                
  
                <li>
                  Whilst the chocolate is melting, begin to sieve the plain flour, coconut flour, and cocoa powder into a large mixing bowl and mix. Once mixed, stir in the baking powder and sugar.
                </li>
                
  
                <li>
                  Once the chocolate has cooled a little, begin to slowly stir the vanilla essence, sunflower oil, soya milk, and melted chocolate into the flour and cocoa mix.
                </li>
                
  
                <li>
                  Now stir in the previously chopped chocolate and pecan nuts, ensuring they are stirred evenly into the mixture.
                </li>
                
  
                <li>
                  Pour the mixture into the baking tin and spread evenly with a spatula.
                </li>
                
  
                <li>
                  Sprinkle the chopped pecan nuts and walnuts across the top and bake in the centre of the oven for 18 to 23 minutes.
                </li>
                
  
                <li>
                  Remove from the oven and allow to cool for 45 minutes. Carefully use the edges of the greaseproof paper to lift the brownie out of the tin and place onto a chopping board. With a sharp knife, gently cut into evenly sized pieces.
                </li>
                
  
                <li>
                  Serve on their own or with some vegan cream or ice cream.
                </li>
                

              </ol>
              

            </div>
          </section>
        </div>
      </article>
    </main>
    <footer
      class="ps-w-full ps-text-white ps-bg-black ps-p-4 ps-mt-12"
    >
      <nav
        class="ps-flex ps-flex-col ps-max-w-lg ps-mx-auto lg:ps-max-w-screen-lg"
      >
        <ul>
          <li
            class="ps-list-disc ps-text-blue-300"
          >
            <a
              class="ps-text-blue-300 hover:ps-underline hover:ps-text-blue-100 focus:ps-text-purple-600 active:ps-text-purple-300"
              href="/en"
            >
              Home
            </a>
          </li>
          <li
            class="ps-list-disc ps-text-blue-300"
          >
            <a
              class="ps-text-blue-300 hover:ps-underline hover:ps-text-blue-100 focus:ps-text-purple-600 active:ps-text-purple-300"
              href="/en/articles"
            >
              Articles
            </a>
          </li>
          <li
            class="ps-list-disc ps-text-blue-300"
          >
            <a
              class="ps-text-blue-300 hover:ps-underline hover:ps-text-blue-100 focus:ps-text-purple-600 active:ps-text-purple-300"
              href="/en/recipes"
            >
              Recipes
            </a>
          </li>
        </ul>
      </nav>
      <div
        class="ps-flex ps-my-4 ps-p-2"
      >
        <span
          class="_footerCopy_522a10 my-0 mx-auto"
        >
          © 2023 Built with 
          <a
            href="https://nextjs.org/"
          >
            Next.js
          </a>
           and 
          <a
            href="https://www.drupal.org/"
          >
            Drupal
          </a>
        </span>
      </div>
    </footer>
  </div>
</DocumentFragment>
`;
